@@ -2,13 +2,8 @@
   <img src="https://github.com/user-attachments/assets/b54b55a1-e013-49e9-a059-fddf3473ed6e" alt="vibra-logo" width="400"/>
 </p>
 
-# Vibra - Social Media App
 
-A social media desktop application built using **JavaFX**. Vibra allows users to register, log in, post content, like, comment, chat with friends in real-time, and more. Ideal for academic use or small social communities.
-
----
-
-## 🚀 Features
+## Features
 
 - User authentication (Register/Login)
 - User profiles with bios, photos, and posts
@@ -24,7 +19,7 @@ A social media desktop application built using **JavaFX**. Vibra allows users to
 
 - **Frontend**: JavaFX
 - **Backend/Logic**: Java (JDBC)
-- **Database**: MySQL or SQLite
+- **Database**: MySQL 
 - **WebSocket Messaging**: Tyrus
 ---
 
@@ -35,7 +30,32 @@ Make sure you have the following installed:
 - [Java JDK 17+](https://adoptium.net/)
 - [JavaFX SDK](https://gluonhq.com/products/javafx/) (ensure it's configured in your IDE)
 - [MySQL](https://www.mysql.com/) or SQLite (depending on your DB)
-- [Tyrus-WebSocket] 
+- [Tyrus-WebSocket] Provided in "websocket files" folder
 
+## Setup
 
+Setup
+Open the project folder in your preferred Java IDE (IntelliJ IDEA, Eclipse, etc.).
+
+Add the required JAR files to your project’s library/module dependencies. These include JavaFX SDK, SendGrid, Tyrus WebSocket client, and the JDBC driver.
+
+Configure the VM options for JavaFX by adding the following (adjust the path as needed):
+
+css
+Copy
+Edit
+--module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml
+Set up the database:
+
+Create the database and tables using the provided schema.sql file.
+
+Update the database connection details (URL, username, password) in the configuration class.
+
+Configure the SendGrid API key:
+
+Obtain an API key from SendGrid.
+
+Add the key to your project configuration or set it as an environment variable.
+
+Run the main application class (Main.java) to launch the app.
 
